--- a/app/scripts/views/yhteinen/jkuAvustuskohde.html
+++ b/app/scripts/views/yhteinen/jkuAvustuskohde.html
@@ -11,7 +11,7 @@
               <input name="{{getName('haettavaavustus')}}" type="text" ng-currency="" noenter select-on-click
                      alvmuunnos="{prosentti: {{kohde.alv}}, alvmukana: {{alv}}}"
                      ng-readonly="isReadonly()" class="form-control"
-                     tooltip-html="{{haeTooltip('haettavaavustus')}}"
+                     tooltip="{{haeTooltip('haettavaavustus')}}"
                      tooltip-trigger="focus"
                      tooltip-placement="top"
                      ng-model="kohde.haettavaavustus"
@@ -32,7 +32,7 @@
             <div class="input-group">
               <input name="{{getName('omarahoitus')}}" type="text" ng-currency="" noenter select-on-click
                      alvmuunnos="{prosentti: {{kohde.alv}}, alvmukana: {{alv}}}"
-                     class="form-control" tooltip-html="{{haeTooltip('omarahoitus')}}"
+                     class="form-control" tooltip="{{haeTooltip('omarahoitus')}}"
                      tooltip-trigger="focus"
                      tooltip-placement="top"
                      ng-readonly="isReadonly()" ng-model="kohde.omarahoitus"
