LIVIJUKU-307 Lähettämisen varmistustekstin muutos. Varmistusdialogin Kyllä-nappula oikeaan reunaan, Ei-nappula vasempaan

--- a/app/scripts/views/hakija/hakemus.html
+++ b/app/scripts/views/hakija/hakemus.html
@@ -373,7 +373,7 @@
             <button
               ng-show="(hakemusKeskenerainen() && allekirjoitusliitetty)"
               juku-varmistusdialogi varmistusotsake="Hakemuksen lähettäminen"
-              varmistusteksti="Oletko varma, että haluat lähettää hakemuksen? Hakemuksen lähettämistä ei ole mahdollista peruuttaa ja hakemuksen sisältöä ei ole mahdollista muuttaa lähettämisen jälkeen."
+              varmistusteksti="Oletko varma, että haluat lähettää hakemuksen? Hakemuksen lähettämistä ei ole mahdollista peruuttaa ja hakemuksen sisältöä ei ole mahdollista muuttaa lähettämisen jälkeen. Lähetä hakemus painamalla Kyllä-painiketta. Huom! Liitteiden määrästä riippuen, hakemuksen lähettäminen asianhallintaan kestää 10-70 sekuntia."
               operaatio="tallennaHakemus(2)"
               class="pull-right btn btn-success">Tallenna ja lähetä hakemus
             </button>
