--- a/app/scripts/components/varmistusdialogi/index.html
+++ b/app/scripts/components/varmistusdialogi/index.html
@@ -1,6 +1,6 @@
 <div class="modal-header">{{varmistusotsake}}</div>
 <div class="modal-body">{{varmistusteksti}}</div>
 <div class="modal-footer">
-  <button class="btn btn-primary" ng-click="ok()">Kyllä</button>
-  <button class="btn btn-warning" ng-click="cancel()">Ei</button>
+  <button class="btn btn-primary pull-right" ng-click="ok()">Kyllä</button>
+  <button class="btn btn-warning pull-left" ng-click="cancel()">Ei</button>
 </div>
