LIVIJUKU-308 Poista hakemustila-janalta Maksettu-tila, kun kyseessä on avustushakemus

--- a/app/scripts/views/hakija/hakemus.html
+++ b/app/scripts/views/hakija/hakemus.html
@@ -89,7 +89,7 @@
     <br>
     <div class="row">
       <div class="hakemuksen-tila col-md-12">
-        <hakemuksen-tila tila="{{hakemus.hakemustilatunnus}}"/>
+        <hakemuksen-tila tila="{{hakemus.hakemustilatunnus}}" tyyppi="{{tyyppi}}"/>
       </div>
     </div>
 
