--- a/app/scripts/views/kasittelija/hakemus.html
+++ b/app/scripts/views/kasittelija/hakemus.html
@@ -58,7 +58,7 @@
 
   <div class="row">
     <div class="hakemuksen-tila col-md-12">
-      <hakemuksen-tila tila="{{hakemus.hakemustilatunnus}}"/>
+      <hakemuksen-tila tila="{{hakemus.hakemustilatunnus}}" tyyppi="{{tyyppi}}"/>
     </div>
   </div>
   <div class="row">
