LIVIJUKU-253 Eri tilassa olevien hakemusten määrän näyttävä komponentti refaktoroitu niin koodin kuin tyylin puolelta ja siirretty components hakemistoon * Kovakoodatut labelit muutettu hakemus-label komponenteiksi

--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -12,3 +12,4 @@
 @import '../scripts/components/navigation'
 @import '../scripts/components/hakemusLabel'
 @import '../scripts/components/hakemuksenTila'
+@import '../scripts/components/hakemusSummary'
