--- a/app/scripts/components/footer/index.html
+++ b/app/scripts/components/footer/index.html
@@ -1,15 +1,12 @@
 <div class="footer navbar">
   <div class="container">
-    <img src="images/juku_logo.svg" class="logo">
-    <div class="col-xs-2">
-      Yhteystiedot
-    </div>
-    <div class="col-xs-4">
+    <div class="col-xs-8">
+      <img src="images/juku_logo.svg" class="logo">
       <div data-ng-include data-src="'buildversion.html'"></div>
       <span ng-include="buildversion.html"></span>
     </div>
     <div class="col-xs-4 footer__domain">
-      Liikennevirasto.fi
+      Liikennevirasto
     </div>
   </div>
 </div>
