LIVIJUKU-253 Labelin fonttikoon muutos ja oma komponentti

--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -13,3 +13,4 @@
 @import '../scripts/components/hakemusLabel'
 @import '../scripts/components/hakemuksenTila'
 @import '../scripts/components/hakemusSummary'
+@import '../scripts/components/label'
