LIVIJUKU-253 Oikea fontti paikoilleen

--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -1,3 +1,5 @@
+@import url('http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,700,300,600,800,400');
+
 @import '../../node_modules/bootstrap/dist/css/bootstrap.min.css'
 @import '../../node_modules/angular-toastr/dist/angular-toastr.css'
 @import '_variables'
@@ -33,6 +35,8 @@ body
   height: 100%
   padding-top: 70px
   z-index: 2
+  font-family: 'Open Sans', sans-serif
+  font-weight: 400
 
 .app
   left: 0
