LIVIJUKU-253 Kirjoitusvirheiden ja asemointien korjailua

--- a/app/scripts/views/kasittelija/suunnittelu.html
+++ b/app/scripts/views/kasittelija/suunnittelu.html
@@ -23,7 +23,7 @@
           <div class="suunnitteluheader">Keskisuuret kaupunkiseudut</div>
         </div>
         <div ng-show="hakijaElyKeskus()">
-          <div class="suunnitteluheader">Ely keskukset</div>
+          <div class="suunnitteluheader">Ely-keskukset</div>
         </div>
       </div>
     </div>
