--- a/app/scripts/components/tab/index.styl
+++ b/app/scripts/components/tab/index.styl
@@ -5,6 +5,7 @@
   border-radius: 5px 5px 0 0
   color: #fff
   font-weight: bold
+  cursor: pointer
   &:hover
     color: #fff
     text-decoration: none
