LIVIJUKU-253 Paneelien tyylien korjailua

--- a/app/scripts/views/kasittelija/hakemuskaudenHallinta.html
+++ b/app/scripts/views/kasittelija/hakemuskaudenHallinta.html
@@ -108,7 +108,7 @@
             </div>
           </div>
           <div class="col-md-3 text-center">
-            <div class="panel panel-info hakemuskausi-panel clickable" data-ng-click="valitseHakemustyyppi('MH1')">
+            <div class="panel panel-primary hakemuskausi-panel clickable" data-ng-click="valitseHakemustyyppi('MH1')">
               <div class="panel-heading">
                 <p class="panel-title">1. maksatushakemus</p>
               </div>
@@ -163,7 +163,7 @@
             </div>
           </div>
           <div class="col-md-3 text-center">
-            <div class="panel panel-info hakemuskausi-panel clickable" data-ng-click="valitseHakemustyyppi('MH2')">
+            <div class="panel panel-primary hakemuskausi-panel clickable" data-ng-click="valitseHakemustyyppi('MH2')">
               <div class="panel-heading">
                 <p class="panel-title">2. maksatushakemus</p>
               </div>
