--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -14,3 +14,4 @@
 @import '../scripts/components/hakemuksenTila'
 @import '../scripts/components/hakemusSummary'
 @import '../scripts/components/label'
+@import '../scripts/components/hakemuskausiPanel'
