--- a/app/scripts/components/hakemusLabel/index.html
+++ b/app/scripts/components/hakemusLabel/index.html
@@ -9,4 +9,4 @@
   <span ng-switch-when="0" class="label hakemus-tila-eikaynnissa">Ei käynnissä</span>
   <span ng-switch-when="FEK" class="label hakemus-tila-eikaynnissa">Ei käynnissä</span>
   <span ng-switch-default class="label label-default">Unknown</span>
-<ng-switch />
+</ng-switch>
