--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -14,4 +14,6 @@
 @import '../scripts/components/hakemuksenTila'
 @import '../scripts/components/hakemusSummary'
 @import '../scripts/components/label'
+@import '../scripts/components/hakemusPanel'
 @import '../scripts/components/hakemuskausiPanel'
+@import '../scripts/components/hakemusLaatikko'
