--- a/app/scripts/components/hakemusLaatikko/index.styl
+++ b/app/scripts/components/hakemusLaatikko/index.styl
@@ -1,8 +1,8 @@
 .hakemus-laatikko
   background: #fff
   .label
-    padding 0.8em 1em
-    font-size 1em
+    padding: 0.8em 1em
+    font-size: 1em
 
 .hakemus-laatikko__hakuaika
   margin-top: 1.5em
