--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -17,3 +17,4 @@
 @import '../scripts/components/hakemusPanel'
 @import '../scripts/components/hakemuskausiPanel'
 @import '../scripts/components/hakemusLaatikko'
+@import '../scripts/components/navigationLink'
