--- a/app/scripts/views/kasittelija/hakemukset.html
+++ b/app/scripts/views/kasittelija/hakemukset.html
@@ -92,12 +92,11 @@
               <div class="col-md-4">
                 <div class="pull-right">
 
-                  <a class="transition-link"
+                  <juku-link-next
                      ng-show="sallittu('kasittely-hakemus')"
                      ng-click="siirrySuunnitteluun(hakemuksetPerVuosi.vuosi, tyyppi, 'KS1')">
                     Suunnittelu ja päätöksenteko
-                    <span class='glyphicon glyphicon-circle-arrow-right'></span>
-                  </a>
+                  </juku-link-next>
 
                 </div>
               </div>
@@ -138,10 +137,11 @@
               <div class="col-md-8"></div>
               <div class="col-md-4">
                 <div class="pull-right">
-                  <button ng-show="sallittu('kasittely-hakemus')" class="btn btn-primary"
-                          ng-click="siirrySuunnitteluun(hakemuksetPerVuosi.vuosi, tyyppi, 'KS2')">
-                    Suunnittelu ja päätöksenteko<span
-                    class='glyphicon glyphicon-play'/></button>
+                  <juku-link-next
+                      ng-show="sallittu('kasittely-hakemus')"
+                      ng-click="siirrySuunnitteluun(hakemuksetPerVuosi.vuosi, tyyppi, 'KS2')">
+                    Suunnittelu ja päätöksenteko
+                  </juku-link-next>
                 </div>
               </div>
             </div>
@@ -182,10 +182,11 @@
               <div class="col-md-8"></div>
               <div class="col-md-4">
                 <div class="pull-right">
-                  <button ng-show="sallittu('kasittely-hakemus')" class="btn btn-primary"
-                          ng-click="siirrySuunnitteluun(hakemuksetPerVuosi.vuosi, tyyppi, 'ELY')">
-                    Suunnittelu ja päätöksenteko<span
-                    class='glyphicon glyphicon-play'/></button>
+                  <juku-link-next
+                      ng-show="sallittu('kasittely-hakemus')"
+                      ng-click="siirrySuunnitteluun(hakemuksetPerVuosi.vuosi, tyyppi, 'ELY')">
+                    Suunnittelu ja päätöksenteko
+                  </juku-link-next>
                 </div>
               </div>
             </div>
