--- a/app/scripts/views/kasittelija/paatos.html
+++ b/app/scripts/views/kasittelija/paatos.html
@@ -5,9 +5,9 @@
   <div ng-show="sallittu('kasittely-hakemus')">
     <div class="row">
       <div class="col-md-12">
-        <a href="#/k/suunnittelu/{{vuosi}}/{{tyyppi}}/{{lajitunnus}}"><span
-          class='glyphicon glyphicon-circle-arrow-left'></span>Palaa
-          suunnittelunäkymään</a>
+        <juku-link-prev href="#/k/suunnittelu/{{vuosi}}/{{tyyppi}}/{{lajitunnus}}">
+          Palaa suunnittelunäkymään
+        </juku-link-prev>
       </div>
     </div>
     <div class="row">
@@ -105,9 +105,9 @@
 
     <div class="row">
       <div class="col-md-6">
-        <a href="#/k/suunnittelu/{{vuosi}}/{{tyyppi}}/{{lajitunnus}}"><span
-          class='glyphicon glyphicon-circle-arrow-left'></span>Palaa
-          suunnittelunäkymään</a>
+        <juku-link-prev href="#/k/suunnittelu/{{vuosi}}/{{tyyppi}}/{{lajitunnus}}">
+          Palaa suunnittelunäkymään
+        </juku-link-prev>
       </div>
       <div class="col-md-3">
         <div ng-show="hakemusTarkastettu()">
