LIVIJUKU-253 * Uusitut profiili-dropdownin tyylit

--- a/app/scripts/components/header/index.html
+++ b/app/scripts/components/header/index.html
@@ -34,14 +34,16 @@
 
       <ul class="nav navbar-nav pull-right">
         <li class="dropdown" dropdown>
-          <a href class="dropdown-toggle navbar__user" dropdown-toggle>
-            <div class="navbar__user__name" ng-if="fullName(user)">
-              {{fullName(user)}}
-            </div>
-            <div class="navbar__user__org">
-              {{$root.userOrganisaatio}}
-            </div>
-          </a>
+          <div class="dropdown-toggle__wrapper" dropdown-toggle>
+            <a href class="dropdown-toggle navbar__user">
+              <div class="navbar__user__name" ng-if="fullName(user)">
+                {{fullName(user)}}
+              </div>
+              <div class="navbar__user__org">
+                {{$root.userOrganisaatio}}
+              </div>
+            </a>
+          </div>
           <ul class="dropdown-menu">
             <li>
               <a class="navbartxt" href="https://testiextranet.liikennevirasto.fi/extranet/c/portal/logout">
