--- a/app/scripts/views/hakija/hakemus.html
+++ b/app/scripts/views/hakija/hakemus.html
@@ -10,17 +10,25 @@
         Palaa hakemusten päänäkymään
       </juku-link-prev>
 
-      <div class="tabs">
-        <a href="#/h/hakemus/{{hakemus.vuosi}}/AH0/{{avustushakemusid}}/{{maksatushakemus1id}}/{{maksatushakemus2id}}"
-           ng-class="onAvustushakemus()? 'tab is-selected' : 'tab'">Avustushakemus {{hakemus.vuosi}}</a>
-        <a
-          href="#/h/hakemus/{{hakemus.vuosi}}/MH1/{{avustushakemusid}}/{{maksatushakemus1id}}/{{maksatushakemus2id}}"
-          ng-class="onMaksatushakemus1()? 'tab is-selected' : 'tab'">1. maksatushakemus {{hakemus.vuosi}}</a>
+      <juku-tabs>
+        <juku-tab
+          href="#/h/hakemus/{{hakemus.vuosi}}/AH0/{{avustushakemusid}}/{{maksatushakemus1id}}/{{maksatushakemus2id}}"
+          selected="onAvustushakemus()">
+          Avustushakemus {{hakemus.vuosi}}
+        </juku-tab>
 
-        <a
+        <juku-tab
+          href="#/h/hakemus/{{hakemus.vuosi}}/MH1/{{avustushakemusid}}/{{maksatushakemus1id}}/{{maksatushakemus2id}}"
+          selected="onMaksatushakemus1()">
+          1. maksatushakemus {{hakemus.vuosi}}
+        </juku-tab >
+
+        <juku-tab
           href="#/h/hakemus/{{hakemus.vuosi}}/MH2/{{avustushakemusid}}/{{maksatushakemus1id}}/{{maksatushakemus2id}}"
-          ng-class="onMaksatushakemus2()? 'tab is-selected' : 'tab'">2. maksatushakemus {{hakemus.vuosi}}</a>
-      </div>
+          selected="onMaksatushakemus2()">
+          2. maksatushakemus {{hakemus.vuosi}}
+        </juku-tab>
+      </juku-tabs>
     </juku-navigation>
 
 
