--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -21,3 +21,4 @@
 @import '../scripts/components/formSection'
 @import '../scripts/components/formRow'
 @import '../scripts/components/form'
+@import '../scripts/components/avustuskohde'
