--- a/app/scripts/components/avustuskohde/index.html
+++ b/app/scripts/components/avustuskohde/index.html
@@ -16,8 +16,7 @@
                      tooltip-placement="top"
                      ng-model="kohde.haettavaavustus"
                      ui-validate="{sallittuArvoHaettavaavustus: 'sallittuArvo(kohde.haettavaavustus)'}"/>
-              <span ng-show="alv" class="input-group-addon">alv {{kohde.alv}} %</span>
-              <span ng-hide="alv" class="input-group-addon">alv 0 %</span>
+              <span ng-hide="isReadonly()" class="input-group-addon">alv {{ alv ? kohde.alv : 0 }}%</span>
             </div>
           </label>
 
@@ -38,8 +37,7 @@
                      ng-readonly="isReadonly()" ng-model="kohde.omarahoitus"
                      ui-validate="{omarahoitusRiittava: 'omarahoitusRiittava(kohde.omarahoitus,kohde.haettavaavustus)',sallittuArvoOmarahoitus: 'sallittuArvo(kohde.omarahoitus)'}"
                      ui-validate-watch=" 'kohde.haettavaavustus' "/>
-              <span ng-show="alv" class="input-group-addon">alv {{kohde.alv}} %</span>
-              <span ng-hide="alv" class="input-group-addon">alv 0 %</span>
+              <span ng-hide="isReadonly()" class="input-group-addon">alv {{ alv ? kohde.alv : 0 }}%</span>
             </div>
           </label>
 
