--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -18,3 +18,7 @@
 @import '../scripts/components/hakemuskausiPanel'
 @import '../scripts/components/hakemusLaatikko'
 @import '../scripts/components/navigationLink'
+@import '../scripts/components/formSection'
+@import '../scripts/components/formRow'
+@import '../scripts/components/form'
+@import '../scripts/components/avustuskohde'
