LIVIJUKU-314 Arvo-validoinnit eivät toimi hakemuslomakkeessa

--- a/app/scripts/components/avustuskohde/index.html
+++ b/app/scripts/components/avustuskohde/index.html
@@ -21,7 +21,7 @@
           </label>
 
 
-          <p class="help-block ng-invalid-sallittu-arvo-haettavaavustus">Arvon tulee olla välillä 0 - 999 999 999 €.</p>
+          <p class="help-block ng-invalid-sallittu-arvo-haettavaavustus">Arvon tulee olla välillä 0 - 999 999 999,99 € (sis. ALV).</p>
 
         </div>
       </div>
@@ -41,7 +41,7 @@
             </div>
           </label>
 
-          <p class="help-block ng-invalid-sallittu-arvo-omarahoitus">Arvon tulee olla välillä 0 - 999 999 999 €.</p>
+          <p class="help-block ng-invalid-sallittu-arvo-omarahoitus">Arvon tulee olla välillä 0 - 999 999 999,99 € (sis. ALV).</p>
 
           <p class="help-block ng-invalid-omarahoitus-riittava">Oma rahoitusosuus tulee olla vähintään
             {{100-avustusprosentti}}% kokonaiskuluista.</p>
